Fixed navbar overlap with narrow window

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,9 @@ html {
 body {
   padding-top: 60px;
 }
+@media screen and (max-width: 768px) {
+    body { padding-top: 140px; }
+}
 
 section {
   overflow: auto;
